--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="navbar navbar-expand-md bg-body-tertiary" > <!-- modo oscuro= data-bs-theme="dark" -->
+    <div class="navbar navbar-expand-md bg-body-tertiary" data-bs-theme="dark"> <!-- modo oscuro= data-bs-theme="dark" -->
         <div class="container-fluid">
             <a href="#" class="navbar-brand">nombre o foto</a> <!-- imagen o nombre empresa-->
 
