--- a/navbar.html
+++ b/navbar.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     
-    <div class="navbar navbar-expand-md bg-body-tertiary" data-bs-theme="dark"> <!-- modo oscuro= data-bs-theme="dark" -->
+    <div class="navbar navbar-expand-md"> <!-- modo oscuro= data-bs-theme="dark" -->
         <div class="container-fluid">
-            <a href="#" class="navbar-brand">nombre o foto</a> <!-- imagen o nombre empresa-->
+            <a href="#" class="navbar-brand">Tecno juegos</a> <!-- imagen o nombre empresa-->
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNavbarContent"> <!--menu colapsable -->
                 <span class="navbar-toggler-icon"></span> <!-- icono menu colapsable -->
@@ -28,16 +28,7 @@
                         <a href="#" class="nav-link">Contact</a>
                     </li>
 
-                    <div class="dropdown" data-bs-toggle="dropdown"> <!-- Menu dropdown -->
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown button
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Opcion 1</a></li>
-                            <li><a class="dropdown-item" href="#">Opcion 2</a></li>
-                            <li><a class="dropdown-item" href="#">Opcion 3</a></li>
-                        </ul>
-                    </div>
+                    
 
                 </ul>
 
