--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     
     <div id="navbar"></div> <!-- Navbar con JS-->
 
+    <header id="mainHeader" style="background-image: url(assets/img/home4.jpg);">
+        <div class="container position-realtive px-5 px-lg-5">
+            <div class="row">
+                <div class="mx-auto col-lg-7 col-xl-6 col-md-12">
+                    <h1>Bienvenido a mi tienda</h1>
+                    <p>Compra juegos al mejor precio Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                </div>
+            </div>
+        </div>
+
+    </header>
+
     <section id="buscar" class="my-3"> <!-- filtro de busqueda con formulario -->
         <div class="container my-3">
             <div class="card">
